--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,4 +1,6 @@
-/* menu-principal */
+/* -------------- */
+/* MENU PRINCIPAL */
+/* -------------- */
 header{
     background: rgba($back-1, 0.6);
     height: 80px;
