--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,36 @@
 @charset "UTF-8";
+/* quicksand-regular - latin */
+@font-face {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/quicksand/quicksand-v9-latin-regular.eot");
+  /* IE9 Compat Modes */
+  src: local("Quicksand Regular"), local("Quicksand-Regular"), url("../fonts/quicksand/quicksand-v9-latin-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/quicksand/quicksand-v9-latin-regular.woff2") format("woff2"), url("../fonts/quicksand/quicksand-v9-latin-regular.woff") format("woff"), url("../fonts/quicksand/quicksand-v9-latin-regular.ttf") format("truetype"), url("../fonts/quicksand/quicksand-v9-latin-regular.svg#Quicksand") format("svg");
+  /* Legacy iOS */
+}
+/* quicksand-700 - latin */
+@font-face {
+  font-family: "Quicksand";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/quicksand/quicksand-v9-latin-700.eot");
+  /* IE9 Compat Modes */
+  src: local("Quicksand Bold"), local("Quicksand-Bold"), url("../fonts/quicksand/quicksand-v9-latin-700.eot?#iefix") format("embedded-opentype"), url("../fonts/quicksand/quicksand-v9-latin-700.woff2") format("woff2"), url("../fonts/quicksand/quicksand-v9-latin-700.woff") format("woff"), url("../fonts/quicksand/quicksand-v9-latin-700.ttf") format("truetype"), url("../fonts/quicksand/quicksand-v9-latin-700.svg#Quicksand") format("svg");
+  /* Legacy iOS */
+}
+@font-face {
+  font-family: "Phagspa";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Microsoft Phagspa"), local("Microsoft-Phagspa"), url("../fonts/phagspa/phagspa.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Phagspa";
+  font-style: normal;
+  font-weight: 700;
+  src: local("Microsoft Phagspa Bold"), local("Microsoft-Phagspa"), url("../fonts/phagspa/phagspa_0.ttf") format("truetype");
+}
 html {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -13,10 +45,14 @@ html {
   box-sizing: inherit;
 }
 
+/* --------- */
 /* Generales */
+/* --------- */
+/* Encabezados y párrafos */
 body {
   line-height: 1.5;
   color: #555758;
+  font-family: "Phagspa";
 }
 body h1, body h2, body h3, body h4, body h5 {
   margin: 0;
@@ -24,25 +60,31 @@ body h1, body h2, body h3, body h4, body h5 {
   padding-bottom: 1em;
   font-weight: normal;
   font-size: 24px;
+  font-family: "Quicksand";
+}
+body h1.titulo, body h2.titulo, body h3.titulo, body h4.titulo, body h5.titulo {
+  color: #cdb16c;
 }
 
 section {
   position: relative;
 }
 
+/* Separador para hero de páginas */
 .separador-superior {
   width: 100%;
   overflow: hidden;
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 2;
 }
 .separador-superior::after {
   /* Oculto en el móvil */
   content: "";
   display: none;
   height: 0;
-  z-index: 0;
+  /* Se utiliza los bordes para darle una forma de triángulo  */
   border-top: 70px solid #ee2630;
   border-bottom: 70px solid transparent;
   border-right: 50vw solid #ee2630;
@@ -59,6 +101,7 @@ section {
   position: absolute;
   bottom: 0;
   left: 0;
+  z-index: 2;
 }
 .separador-inferior::after {
   /* Oculto en el móvil */
@@ -77,6 +120,7 @@ section {
   }
 }
 
+/* estilos a todas las clases que tengan row */
 .row {
   margin: 0 auto;
   max-width: 1170px;
@@ -85,6 +129,11 @@ section {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+@media all and (min-width: 981px) {
+  .row {
+    flex-wrap: nowrap;
+  }
 }
 .row .column {
   width: 100%;
@@ -110,6 +159,7 @@ section {
   background-size: cover;
 }
 
+/* Estilos para contenedor de imágenes */
 .img-contenedor {
   max-width: 100%;
   margin: 0 auto;
@@ -122,6 +172,9 @@ section {
 }
 
 /* redes-sociales */
+.redes-sociales a {
+  color: inherit;
+}
 .redes-sociales i {
   width: 37px;
   height: 37px;
@@ -147,20 +200,22 @@ section {
 /* Botón */
 div.btn a.btn {
   color: white;
-  background: #b2be1d;
+  background: #c3ad19;
   display: inline-block;
   padding: 10px 15px;
   border-radius: 5px;
   transition: 0.5s;
   text-decoration: none;
-  border: 1px solid #b2be1d;
+  border: 1px solid #c3ad19;
 }
 div.btn a.btn:hover {
   color: #b2be1d;
   background: white;
 }
 
-/* menu-principal */
+/* -------------- */
+/* MENU PRINCIPAL */
+/* -------------- */
 header {
   background: rgba(238, 38, 48, 0.6);
   height: 80px;
@@ -289,6 +344,63 @@ body.oficinas li.oficinas a {
   border-bottom: 6px solid #dda711;
 }
 
+/* ----------- */
+/* Animaciones */
+/* ----------- */
+@keyframes slideInicio {
+  0% {
+    transform: translate(0, 0);
+  }
+  20% {
+    transform: translate(-100vw, 0);
+  }
+  40% {
+    transform: translate(-200vw, 0);
+  }
+  60% {
+    transform: translate(-300vw, 0);
+  }
+  80% {
+    transform: translate(-400vw, 0);
+  }
+  100% {
+    transform: translate(-500vw, 0);
+  }
+}
+@keyframes slideNoticias1 {
+  0% {
+    transform: translate(0, 0);
+  }
+  33% {
+    transform: translate(-30vw, 0);
+  }
+  66% {
+    transform: translate(-60vw, 0);
+  }
+  100% {
+    transform: translate(-90vw, 0);
+  }
+}
+@keyframes slideNoticias2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  20% {
+    transform: translate(-90vw, 0);
+  }
+  40% {
+    transform: translate(-180vw, 0);
+  }
+  60% {
+    transform: translate(-270vw, 0);
+  }
+  80% {
+    transform: translate(-360vw, 0);
+  }
+  100% {
+    transform: translate(-450vw, 0);
+  }
+}
 /* ---------------- */
 /* PÁGINA INICIO */
 /* ---------------- */
@@ -296,6 +408,37 @@ body.oficinas li.oficinas a {
 body.inicio section.hero {
   background: url("../img/Bauhaus_Final_2zu1.jpg");
   background-position: -340px center;
+}
+body.inicio section.hero .slider {
+  overflow: hidden;
+  height: 100vh;
+  width: 100%;
+}
+body.inicio section.hero .row {
+  width: 600vw;
+  height: 100%;
+  background-position: center center;
+  background-size: cover;
+  display: flex;
+  animation: slideInicio 20s infinite 2s;
+  position: relative;
+  z-index: 1;
+  padding: 0;
+}
+body.inicio section.hero .row .column {
+  width: 100vw;
+}
+body.inicio section.hero .row .column:nth-child(2) {
+  background-image: url("../img/slide-2.jpg");
+}
+body.inicio section.hero .row .column:nth-child(3) {
+  background-image: url("../img/slide-3.jpg");
+}
+body.inicio section.hero .row .column:nth-child(4) {
+  background-image: url("../img/slide-4.jpg");
+}
+body.inicio section.hero .row .column:nth-child(5) {
+  background-image: url("../img/slide-5.jpg");
 }
 @media all and (min-width: 1400px) {
   body.inicio section.hero {
@@ -369,6 +512,7 @@ section.nuestra-universidad .row {
   section.nuestra-universidad .row {
     padding-left: 120px;
     flex-direction: row;
+    flex-wrap: nowrap;
   }
 }
 section.nuestra-universidad .column:nth-child(1) {
@@ -391,7 +535,7 @@ section.nuestra-universidad .column:nth-child(2) {
 }
 section.nuestra-universidad .img-contenedor {
   width: 350px;
-  margin-left: 20px;
+  margin: 0 auto;
 }
 
 /* Sección Nuestro Equipo */
@@ -494,6 +638,7 @@ section.equipo .row:nth-child(2) .column .descripcion div.redes-sociales i {
 /* ---------------- */
 /* Hero */
 body.lo-que-somos section.hero {
+  color: white;
   background-image: url("../img/Bauhaus-1.jpg");
   position: relative;
 }
@@ -502,7 +647,7 @@ body.lo-que-somos section.hero .row {
   padding-left: 0;
   padding-right: 0;
   position: relative;
-  background: rgba(255, 255, 255, 0.85);
+  overflow: hidden;
 }
 @media only screnn and (min-width) {
   body.lo-que-somos section.hero .row {
@@ -517,12 +662,23 @@ body.lo-que-somos section.hero .column {
   flex-direction: column;
   justify-content: flex-start;
   padding: 30px;
+  position: relative;
+  z-index: 3;
+  background: rgba(238, 38, 48, 0.85);
 }
 @media only screen and (min-width: 981px) {
   body.lo-que-somos section.hero .column {
     justify-content: center;
     width: 60%;
   }
+}
+body.lo-que-somos section.hero .column:nth-child(1) {
+  transition: transform 0.5s linear;
+}
+body.lo-que-somos section.hero .column:nth-child(1):hover {
+  transform: scale(1.2);
+  position: relative;
+  z-index: 1;
 }
 body.lo-que-somos section.hero .column.img-nuestra-historia {
   display: none;
@@ -545,15 +701,45 @@ section.lo-que-somos {
   padding-bottom: 40px;
 }
 section.lo-que-somos .row {
-  padding-top: 40px;
   flex-direction: column;
-  padding: 0;
+  position: relative;
 }
 @media all and (min-width: 981px) {
   section.lo-que-somos .row {
-    padding-left: 40px;
-    padding-right: 40px;
+    padding: 40px 40px 0 60px;
     flex-direction: row;
+  }
+}
+section.lo-que-somos .row::before {
+  /* Márgenes */
+  display: none;
+  content: "";
+  height: 100%;
+  position: absolute;
+  width: 22px;
+  top: 0;
+  left: 0;
+  background: #dda711;
+}
+@media all and (min-width: 981px) {
+  section.lo-que-somos .row::before {
+    display: block;
+  }
+}
+section.lo-que-somos .row::after {
+  /* márgenes */
+  display: none;
+  content: "";
+  height: calc(100% + 80px);
+  position: absolute;
+  width: 22px;
+  bottom: -40px;
+  right: 0;
+  background: #dda711;
+}
+@media all and (min-width: 981px) {
+  section.lo-que-somos .row::after {
+    display: block;
   }
 }
 section.lo-que-somos .column {
@@ -590,6 +776,254 @@ section.lo-que-somos .column.video .video iframe {
   section.lo-que-somos .column.texto {
     width: 40%;
   }
+}
+
+section.noticias {
+  background-image: url("../img/Bauhaus-1.jpg");
+  background-color: rgba(238, 38, 48, 0.8);
+  background-blend-mode: multiply;
+  background-attachment: fixed;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  position: relative;
+}
+section.noticias .flecha {
+  position: absolute;
+  font-size: 48px;
+  color: white;
+  z-index: 2;
+}
+section.noticias .flecha-izquierda {
+  top: 50%;
+  left: 1vw;
+  transform: translate(0, -50%);
+}
+section.noticias .flecha-derecha {
+  top: 50%;
+  right: 1vw;
+  transform: translate(0, -50%);
+}
+section.noticias .flecha:hover {
+  cursor: pointer;
+}
+section.noticias .slider {
+  position: relative;
+  overflow: hidden;
+  width: 90vw;
+  margin: 0 auto;
+}
+section.noticias .slider .row {
+  display: flex;
+  max-width: none;
+  width: 600%;
+  padding: 0;
+  animation: slideNoticias2 20s infinite;
+}
+@media all and (min-width: 981px) {
+  section.noticias .slider .row {
+    animation: slideNoticias1 20s infinite;
+  }
+}
+section.noticias .slider .column {
+  width: 90vw;
+  display: flex;
+  margin: 0;
+}
+@media all and (min-width: 981px) {
+  section.noticias .slider .column {
+    width: 30vw;
+  }
+}
+section.noticias .slider .column > div {
+  width: 50%;
+  flex-grow: 1;
+}
+section.noticias .slider .column > div.noticia {
+  padding: 20px;
+  background-color: #ee2630;
+}
+section.noticias .slider .column > div.noticia p {
+  color: white;
+}
+section.noticias .slider h3 {
+  display: table;
+  position: relative;
+  padding-bottom: 0.5em;
+}
+section.noticias .slider h3::after {
+  display: block;
+  content: "";
+  width: 100%;
+  height: 5px;
+  background: white;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+section.noticias .row.titulo {
+  color: white;
+  max-width: none;
+  width: 90%;
+  text-align: right;
+}
+section.noticias .row.titulo h2 {
+  padding-top: 0;
+}
+section.noticias .img-contenedor img {
+  object-fit: cover;
+}
+
+/* ------------------- */
+/* Sección Historia */
+/* ------------------- */
+/* hero */
+.historia section.hero {
+  background-image: url("../img/Bauhaus-1.jpg");
+  background-attachment: fixed;
+  color: white;
+  min-height: 100vh;
+  padding-top: 80px;
+}
+.historia section.hero .row.historia {
+  padding-left: 40px;
+  padding-right: 20px;
+  display: flex;
+  overflow: hidden;
+}
+@media all and (min-width: 981px) {
+  .historia section.hero .row.historia {
+    background-color: rgba(238, 38, 48, 0.8);
+  }
+}
+.historia section.hero .row.historia .column {
+  position: relative;
+  transition: transform 0.5s linear;
+}
+.historia section.hero .row.historia .column:nth-child(1) {
+  z-index: 1;
+  padding: 20px;
+}
+@media all and (min-width: 981px) {
+  .historia section.hero .row.historia .column:nth-child(1) {
+    width: 60%;
+  }
+}
+.historia section.hero .row.historia .column:nth-child(2) {
+  z-index: 0;
+}
+@media all and (min-width: 981px) {
+  .historia section.hero .row.historia .column:nth-child(2) {
+    width: 40%;
+  }
+}
+.historia section.hero .row.historia .column:nth-child(2):hover {
+  transform: scale(1.2);
+}
+.historia section.hero .row:not(.historia) {
+  padding: 40px;
+}
+.historia section.hero .img-contenedor {
+  height: 100%;
+  max-height: 400px;
+}
+
+/* sección creador */
+section.creador {
+  margin-top: 40px;
+}
+section.creador > .row {
+  padding-top: 40px;
+  max-width: 1080px;
+  width: 100%;
+  background: white;
+  position: relative;
+}
+@media all and (min-width: 768px) {
+  section.creador > .row {
+    width: 80%;
+  }
+}
+section.creador > .row::before {
+  /* Márgenes */
+  display: none;
+  content: "";
+  height: 100%;
+  position: absolute;
+  width: 22px;
+  top: 0;
+  left: 0;
+  background: #dda711;
+}
+@media all and (min-width: 981px) {
+  section.creador > .row::before {
+    display: block;
+  }
+}
+section.creador > .row::after {
+  /* márgenes */
+  display: none;
+  content: "";
+  height: 80%;
+  position: absolute;
+  width: 22px;
+  bottom: 0;
+  right: 0;
+  background: #dda711;
+}
+@media all and (min-width: 981px) {
+  section.creador > .row::after {
+    display: block;
+  }
+}
+@media all and (min-width: 981px) {
+  section.creador > .row .column:nth-child(1) {
+    width: 20%;
+  }
+}
+@media all and (min-width: 981px) {
+  section.creador > .row .column:nth-child(2) {
+    width: 80%;
+  }
+}
+section.creador > .row .row {
+  padding: 0;
+}
+@media all and (min-width: 981px) {
+  section.creador > .row .row {
+    padding: 1em;
+  }
+}
+section.creador > .row .row:nth-child(1) {
+  display: block;
+}
+section.creador > .row .row:nth-child(1) .img-contenedor {
+  margin-right: 1em;
+}
+@media all and (min-width: 768px) {
+  section.creador > .row .row:nth-child(1) .img-contenedor {
+    float: left;
+  }
+}
+section.creador > .row .row:nth-child(1) .redes-sociales {
+  clear: both;
+}
+@media all and (min-width: 981px) {
+  section.creador > .row .row:nth-child(2) > * {
+    width: 50%;
+  }
+}
+section.creador .redes-sociales {
+  color: white;
+}
+section.creador .redes-sociales i {
+  background: #2e4da8;
+}
+
+/* Sección con background */
+section.back-1 {
+  background-image: url("../img/Bauhaus-1.jpg");
+  background-attachment: fixed;
+  min-height: 250px;
 }
 
 /* ------------------- */
@@ -750,7 +1184,7 @@ section.lo-que-somos .column.video .video iframe {
     top: 50%;
     right: 0;
     height: 90%;
-    border-right: 10px solid #b2be1d;
+    border-right: 14px solid #c3ad19;
     transform: translate(0, -50%);
   }
 }
@@ -797,6 +1231,19 @@ section.lo-que-somos .column.video .video iframe {
   max-width: 400px;
   margin: 0 auto;
 }
+.oficinas section.hero .row .column p.texto {
+  font-size: 24px;
+  letter-spacing: 2px;
+  font-weight: lighter;
+  font-family: "Quicksand";
+}
+.oficinas section.hero .row .column p.horario {
+  font-weight: bold;
+  margin-bottom: 1em;
+}
+.oficinas section.hero .row .column div.redes-sociales {
+  margin: 1em 0;
+}
 .oficinas section.hero .row .column div.redes-sociales i {
   display: inline-block;
   font-size: 16px;
@@ -813,6 +1260,11 @@ footer {
 }
 body.inicio footer {
   padding-top: 0;
+}
+body.lo-que-somos footer {
+  background-image: url("../img/Bauhaus-1.jpg");
+  background-attachment: fixed;
+  background-blend-mode: multiply;
 }
 @media all and (min-width: 768px) {
   footer {
@@ -851,7 +1303,7 @@ footer .column > * {
 footer .column > *:last-child {
   margin-right: 0;
 }
-footer .column .redes-sociales {
+footer .column .redes-sociales a {
   color: #2e4da8;
 }
 footer .column .img-contenedor {
